Mon Mar 15 20:53:10 CET 2004 (tk)
---------------------------------
  * clamav-milter: version number increased to 0.70
  V 0.70-rc

Mon Mar 15 18:40:44 GMT 2004 (trog)
-----------------------------------
  * libvlamav/ole2_extract.c: fix cli_malloc() error

Mon Mar 15 17:05:01 CET 2004 (tk)
---------------------------------
  * libclamav: unrarlib: fixed segfault with some Bagle's RAR archives

Sun Mar 14 21:48:25 CET 2004 (tk)
---------------------------------
  * etc/clamav.conf: ScanOLE2 enabled by default
  * doc: manuals updated
  * fixed gcc warnings

Sat Mar 13 23:14:44 CET 2004 (tk)
---------------------------------
  * doc: clamdoc.pdf - updated (for 0.70) and slightly reorganized

Sat Mar 13 14:28:24 GMT 2004 (trog)
-----------------------------------
  * clamd: remove mutex lock in SIGUSR2 code. Using a
	mutex in a signal handler is not allowed.

Sat Mar 13 13:52:51 CET 2004 (tk)
---------------------------------
  * clamd: support SIGUSR2 and force a database reload

Thu Mar 11 21:50:32 CET 2004 (tk)
---------------------------------
  * libclamav: rar: added support for encrypted archive (Encrypted.RAR)
	       detection

Thu Mar 11 00:16:11 CET 2004 (tk)
---------------------------------
  * libclamav: rar support: due to a bug only first file in archive was
	       scanned. Fixed and improved by Dirk Mueller <dmuell*gmx.net>.
  * freshclam, clamscan: fixed logfile permissions (Dirk Mueller)

Wed Mar 10 22:14:45 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Fixed segfault which happens when a UNIX mailbox
  	with more than one message quits because a message before the last
	one can't be parsed

Wed Mar 10 20:51:54 CET 2004 (tk)
---------------------------------
  * doc: + Polish sendmail_clamav how-to updated (Przemyslaw Holowczyc
	   <doozer*skc.com.pl>)
	 + included new Polish how-to on ClamAV and Samba integration (by
	   Przemyslaw Holowczyc)

Wed Mar 10 20:06:35 CET 2004 (tk)
---------------------------------