@@ -1,3 +1,9 @@
+Tue Mar 16 20:43:20 CET 2004 (tk)
+---------------------------------
+  * libclamav: unrarlib: don't use UnstoreFile() because it causes memory
+	       corruption. Restored support for standard archives (yesterday's
+	       fix disabled RAR support completely).
+
 Mon Mar 15 20:53:10 CET 2004 (tk)
 ---------------------------------
   * clamav-milter: version number increased to 0.70
